--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ php:
   - 5.4
   - hhvm
 
-script: composer install && phpunit --coverage-text
+before_script: composer install
+script: phpunit --coverage-text
