module loading working (with invokables and namespace resolving

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Slender\\": "src/"
+            "Slender\\": "src/",
+            "Slender\\Module\\RouteRegistrar\\": "example/module/route-registrar/src"
         }
     },
     "require-dev": {
