--- a/example/public/.htaccess
+++ b/example/public/.htaccess
@@ -1,3 +1,4 @@
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^.*$ index.php [NC,L]
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . index.php [L]
