hacking the autoloader together. Loads modules nicely

--- a/core-modules/twig/slender.yml
+++ b/core-modules/twig/slender.yml
@@ -1,3 +1,9 @@
+##########################################
+#
+#  Twig templating engine integration
+#
+###########################################
+
 module:
   name: twig
   author: Alan Pich <alan.pich@gmail.com>
@@ -5,4 +11,5 @@ module:
   autoload: composer
 
 services:
+  ## Overwrite the default View class to use Twig
   view: Slender\Modules\Twig\Factories\ViewFactory
