--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,14 @@
         "php": ">=5.3.0",
         "slim/slim": "dev-develop",
         "symfony/finder": "*",
-        "symfony/yaml": "*"
+        "symfony/yaml": "*",
+        "symfony/class-loader": "2.4.2"
     },
     "autoload": {
         "psr-4": {
             "Slender\\": "src/",
-            "Slender\\Module\\RouteRegistrar\\": "core-modules/route-registrar/src"
+            "Slender\\Module\\RouteRegistrar\\": "core-modules/route-registrar/src",
+            "Slender\\Module\\Twig\\": "core-modules/twig/src"
         }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.1.*@dev"
     }
 }
