it works! it finally works!

--- a/example/config/slender.yml
+++ b/example/config/slender.yml
@@ -14,7 +14,7 @@ modulePaths:
 routes:
   home:
     route: /
-    controller: HomepageController
+    controller: Skeleton\HomepageController
     action: index
     methods:
       - GET
