--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "psr-4": {
             "Slender\\": "src/",
             "Slender\\Module\\RouteRegistrar\\": "core-modules/route-registrar/src",
-            "Slender\\Module\\Twig\\": "core-modules/twig/src"
+            "Slender\\Module\\Twig\\": "core-modules/twig/src",
+            "Slender\\Module\\Controllers\\": "core-modules/controllers/src",
+            "Slender\\Module\\EventManager\\": "core-modules/event-manager/src"
         }
     }
 }
