--- a/core-modules/route-registrar/slender.yml
+++ b/core-modules/route-registrar/slender.yml
@@ -3,16 +3,8 @@ module:
   namespace: Slender\Module\RouteRegistrar
   version: 1.0.0
   author: Alan Pich <alan.pich@gmail.com>
-
+  require:
+    Slender\Module\EventManager
 
 services:
   route-registrar: Slender\Module\RouteRegistrar\Factory
-
-
-routes:
-  foo:
-    route: /foo
-    controller: FooController
-    action: fooAction
-    methods:
-      - GET
