--- a/example/config/slender.yml
+++ b/example/config/slender.yml
@@ -13,7 +13,7 @@ modulePaths:
 
 routes:
   home:
-    route: /
+    route: /(:id)
     controller: Skeleton\HomepageController
     action: index
     methods:
