--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,12 @@
             "Slender\\Module\\Controllers\\": "core-modules/controllers/src",
             "Slender\\Module\\EventManager\\": "core-modules/event-manager/src"
         }
+    },
+    "require-dev": {
+        "alebear/versioncontrol_git": "dev-master",
+        "phpunit/phpunit": "3.7.32",
+        "sebastian/phpcpd": "*",
+        "phpmd/phpmd": "*",
+        "squizlabs/php_codesniffer": "dev-master"
     }
 }
