--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,9 @@
 
 
 
+    <!-- ======================================= -->
+    <!--  Target: Release a new version!         -->
+    <!-- ======================================= -->
     <target name="release"
             description="Merge to master, tag new version and release to packagist">
 
@@ -51,6 +54,7 @@
                 <istrue value="${unittests_failed}" />
                 <then>
                     <echo msg="${unittests_output}" />
+                    <exec command="git checkout develop" />
                     <fail msg="Unit Tests failed" />
                 </then>
             </if>
@@ -66,6 +70,7 @@
                 <istrue value="${phpcpd_failed}" />
                 <then>
                     <echo msg="${phpcpd_output}" />
+                    <exec command="git checkout develop" />
                     <fail msg="Copy-paste detector failed" />
                 </then>
             </if>
@@ -80,6 +85,7 @@
                 <istrue value="${phpmd_failed}" />
                 <then>
                     <echo msg="${phpmd_output}" />
+                    <exec command="git checkout develop" />
                     <fail msg="Mess Detector failed" />
                 </then>
             </if>
@@ -95,6 +101,7 @@
                 <istrue value="${phpcs_failed}" />
                 <then>
                     <echo msg="${phpcs_output}" />
+                    <exec command="git checkout develop" />
                     <fail msg="Code Sniffer failed" />
                 </then>
             </if>
