--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,17 @@
         "slim/slim": "dev-develop",
         "symfony/finder": "*",
         "symfony/yaml": "*",
-        "symfony/class-loader": "2.4.2"
+        "symfony/class-loader": "2.4.2",
+        "doctrine/annotations": "*"
     },
     "autoload": {
         "psr-4": {
             "Slender\\": "src/",
-            "Slender\\Module\\RouteRegistrar\\": "core-modules/route-registrar/src",
+            "Slender\\Module\\RouteManager\\": "core-modules/route-manager/src",
             "Slender\\Module\\Twig\\": "core-modules/twig/src",
             "Slender\\Module\\Controllers\\": "core-modules/controllers/src",
-            "Slender\\Module\\EventManager\\": "core-modules/event-manager/src"
+            "Slender\\Module\\EventManager\\": "core-modules/event-manager/src",
+            "Slender\\Module\\DependencyInjector\\": "core-modules/dependency-injector/src"
         }
     },
     "require-dev": {
