--- a/src/slender.yml
+++ b/src/slender.yml
@@ -28,8 +28,7 @@ view-paths:
 # Core modules required by Slender
 #
 modules:
-  - Slender\Module\Controllers
-  - Slender\Module\RouteRegistrar
+  - Slender\Module\RouteManager
 
 ##
 # Service & Factory Registry
