--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "autoload": {
         "psr-4": {
             "Slender\\": "src/",
+            "Slender\\Base\\": "core-modules/base",
             "Slender\\Module\\RouteManager\\": "core-modules/route-manager/src",
             "Slender\\Module\\Twig\\": "core-modules/twig/src",
             "Slender\\Module\\Controllers\\": "core-modules/controllers/src",
