--- a/src/slender.yml
+++ b/src/slender.yml
@@ -27,8 +27,7 @@ view-paths:
 ##
 # Core modules required by Slender
 #
-modules:
-  - Slender\Module\RouteManager
+modules: []
 
 ##
 # Service & Factory Registry
