--- a/core-modules/base/slender.yml
+++ b/core-modules/base/slender.yml
@@ -7,5 +7,6 @@ module:
   name: Slender\Base
   namespace: Slender\Base
   require:
+    - Slender\Module\ServiceManager
     - Slender\Module\Twig
     - Slender\Module\RouteManager
