--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,13 @@ before_install:
   - sudo apt-get install -qq libxml2-dev
 
 before_script:
- - composer install
+ - wget http://getcomposer.org/composer.phar
+ - php composer.phar install --dev --no-interaction
+
 
 
 script: phpunit --coverage-text
+
+
+after_script:
+ - php vendor/bin/coveralls -v
