travis needs clover coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ before_script:
 
 
 
-script: phpunit --coverage-text
+script:
+  - mkdir -p build/logs
+  - phpunit --coverage-clover build/logs/clover.xml
 
 
 after_script:
