--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "symfony/finder": "*",
         "symfony/yaml": "*",
         "symfony/class-loader": "2.4.2",
-        "doctrine/annotations": "*"
+        "doctrine/annotations": "*",
+        "twig/twig": "*"
     },
     "autoload": {
         "psr-4": {
