--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,8 @@
         "squizlabs/php_codesniffer": "dev-master",
         "fabpot/php-cs-fixer": "*",
         "satooshi/php-coveralls": "dev-master",
-        "mockery/mockery": "0.9.0"
+        "mockery/mockery": "0.9.0",
+        "michelf/php-markdown": "*",
+        "knplabs/github-api": "*"
     }
 }
