--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
     "keywords": ["app","framework","slim","slender"],
     "license": "MIT",
     "version": "0.0.0",
-    "minimum-stability": "dev",
     "homepage": "http://alanpich.github.io/slender",
     "authors": [
         {
@@ -21,17 +20,16 @@
         "symfony/class-loader": "2.4.2",
         "doctrine/annotations": "*",
         "twig/twig": "*",
-        "slender/route-manager": "dev-develop"
+        "slender/route-manager": "0.0.1",
+        "slender/service-manager": "0.0.1"
     },
     "autoload": {
         "psr-4": {
             "Slender\\": "src/",
             "Slender\\Base\\": "core-modules/base",
-            "Slender\\Module\\Twig\\": "core-modules/twig/src",
             "Slender\\Module\\Controllers\\": "core-modules/controllers/src",
             "Slender\\Module\\EventManager\\": "core-modules/event-manager/src",
             "Slender\\Module\\DependencyInjector\\": "core-modules/dependency-injector/src",
-            "Slender\\Module\\ServiceManager\\": "core-modules/service-manager/src",
             "Slender\\Module\\AssetExposer\\": "core-modules/asset-exposer/src"
         }
     },
