--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "slim/slim": "@dev",
+        "slim/slim": "dev-develop@dev",
         "symfony/finder": "*",
         "symfony/yaml": "*",
         "symfony/class-loader": "2.4.2",
